# csgrn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
csgrn/: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  run.sh
csgrn/.cache/clangd/index/: _fixes.hpp.A6730E1F46AC5AFA.idx  _vectorize.hpp.3A9141461A6FF66C.idx  common.hpp.A4A348EAABCB495E.idx  compute_common.hpp.0404D5F332F5A10A.idx  compute_shader.hpp.3FEA58CCF998CF9E.idx  compute_vector_decl.hpp.A02083E919B779B1.idx  compute_vector_relational.hpp.E3BBE95D5EE6BC19.idx  context.c.8BF26B1D7EF3BFAE.idx  egl_context.c.E3C2B3C1A513FD02.idx  exponential.hpp.D5457841F40615D9.idx  func_common.inl.11BBC2F5DAFA6E8A.idx  func_exponential.inl.78193EBACA74456C.idx  func_geometric.inl.CC85C6B4CC510BDD.idx  func_integer.inl.2608BCD13733D26F.idx  func_matrix.inl.6471A2A4A3576A25.idx  func_packing.inl.71E8536FE4CF8DBA.idx  func_trigonometric.inl.7538E77FF30A41B3.idx  func_vector_relational.inl.FD7BC13A6C889AB0.idx  fwd.hpp.2BF896EB38E913F2.idx  geometric.hpp.4B92302D28DD6229.idx  glad.c.80FB2E9A13417480.idx  glad.h.D1512C3B6BF6C497.idx  glfw3.h.FDEA4D9A7855F04E.idx  glfw3native.h.589E0DA1AF2D193A.idx  glm.hpp.238ED17E3226ABE2.idx  glx_context.c.B3CC6DB5E70C83C2.idx  init.c.FCC6E4A38CA75A53.idx  input.c.4DADF3156F48FB09.idx  integer.hpp.2339A70E182D905D.idx  internal.h.98D78016B144694C.idx  (+151 more)
csgrn/models/: cyls.scad  tmp.csg
csgrn/src/: compute_shader.hpp  glad.c  hit_record.hpp  hittable.hpp  main.cpp  material.hpp  ray.hpp  sphere.hpp
csgrn/src/shaders/: raytracer.glsl
(+31 files in other folders)
